# RepoPolit

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  USAGE.md  pyproject.toml
RepoPilot/: __init__.py  __main__.py  cli.py  context_manager.py  enhancements.py  evaluator.py  mcp.py  memory.py  memory_decay.py  metrics.py  models.py  retrieval.py  run_store.py  runtime.py  skills.py  tools.py  workspace.py
RepoPilot/cli/: __init__.py  app.py
RepoPilot/config/: __init__.py
RepoPilot/core/: __init__.py  context_manager.py  enhancements.py  runtime.py
RepoPilot/evaluation/: __init__.py  evaluator.py  metrics.py
RepoPilot/mcp/: __init__.py  client.py
RepoPilot/memory/: __init__.py  decay.py  layered.py  reflection.py  retrieval.py
RepoPilot/models/: __init__.py  clients.py
RepoPilot/skills/: __init__.py  registry.py
RepoPilot/store/: __init__.py
RepoPilot/tools/: __init__.py  registry.py
RepoPilot/workspace/: __init__.py  context.py
benchmarks/: coding_tasks.json
scripts/: collect_resume_metrics.py  run_large_scale_experiments.py  run_provider_experiments.py
tests/: test_agent.py  test_context_manager.py  test_enhancements.py  test_evaluator.py  test_memory.py  test_metrics.py  test_repopilot.py  test_run_store.py  test_safety_invariants.py  test_task_state.py
